tests/NormalTests/paczka1/fuzzy1/92606607.err
Error in line 3: y8nN S633 42,9
Error in line 7: 45lc S119 73,3
Error in line 15: vL5A A267 59,1
Error in line 12: qbhRA4dJ S633 84,5
Error in line 9: 45lc S633 73,3
